# NostrClient

./: .gitignore  App.tsx  app.json  bun.lockb  devenv.nix  local.properties  package.json
.android/cache/: sdkbin-1_029f9a26-sys-img2-4_xml  sdkbin-1_6dd634b6-sys-img2-4_xml  sdkbin-1_706db414-sys-img2-4_xml  sdkinf-1_029f9a26-sys-img2-4_xml  sdkinf-1_02d73479-sys-img2-4_xml  sdkinf-1_2193743a-addon2-3_xml  sdkinf-1_3bb7c63e-sys-img2-4_xml  sdkinf-1_485070ac-sys-img2-4_xml  sdkinf-1_53ed092d-addon2-3_xml  sdkinf-1_678e6ea3-sys-img2-4_xml  sdkinf-1_6dd634b6-sys-img2-4_xml  sdkinf-1_706db414-sys-img2-4_xml  sdkinf-1_72847604-sys-img2-4_xml  sdkinf-1_7577a689-sys-img2-4_xml  sdkinf-1_7fa6a91a-sys-img2-4_xml  sdkinf-1_8f4284d5-sys-img2-4_xml  sdkinf-1_a37be9bd-sys-img2-4_xml  sdkinf-1_b743781d-repository2-2_xml  sdkinf-1_b7518f9e-repository2-3_xml  sdkinf-1_bdaee495-sys-img2-4_xml  sdkinf-1_c45a1453-sys-img2-4_xml  sdkinf-1_d1e71dd8-sys-img2-4_xml  sdkinf-1_d2c7e9a3-addons_list-6_xml  sdkinf-1_d7ae54ad-addon2-3_xml  sdkinf-1_da4252ec-sys-img2-4_xml  sdkinf-1_df1ec398-sys-img2-4_xml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/anonymous/mewtwo/: MainActivity.kt  MainApplication.kt
android/app/src/main/jni/: CMakeLists.txt  OnLoad.cpp
android/app/src/main/res/values/: strings.xml
shared/: NostrClient.cpp  NostrClient.h
specs/: NostrClient.ts
